--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Give</a></li>
+                <li><a href="give.html">Give</a></li>
+                <li><a href="#">Account</a></li>
             </ul>
         </nav>
     </header>
