--- a/give.html
+++ b/give.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>give</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,16 @@
     <div id="giveBody">
         <br><br><br><br><br>
         <img src="Picture/ITURO.jpg" class="imgGive">
+    </div>
+    <div class="row">
+    <div class="column">
+    <img src="Picture/icons/visa.png" class="visa">
+    <button type="button" style="margin-left:;width:10em"><h4>Click here</h4></button>
+    </div>
+    <div class="column">
+    <img src="Picture/icons/phone.png" class="phone">
+    <button type="button" style="margin-left: 2em;margin-top:-1.5em;width:10em"><h4>Click here</h4></button>
+    </div>
     </div>
     <div class="conc"><h3>Copy Right©2023  MIRACLE CENTER</h3></div> 
 </body>
