--- a/give.html
+++ b/give.html
@@ -28,11 +28,11 @@
     <div class="row">
     <div class="column">
     <img src="Picture/icons/visa.png" class="visa">
-    <button type="button" style="margin-left:;width:10em"><h4>Click here</h4></button>
+    <button type="button" style="width:10em"><h4>Click here!</h4></button>
     </div>
     <div class="column">
     <img src="Picture/icons/phone.png" class="phone">
-    <button type="button" style="margin-left: 2em;margin-top:-1.5em;width:10em"><h4>Click here</h4></button>
+    <button type="button" style="margin-left: 2em;margin-top:-1.5em;width:10em"><h4>Click here!</h4></button>
     </div>
     </div>
     <div class="conc"><h3>Copy Right©2023  MIRACLE CENTER</h3></div> 
