--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
             <div class="container-lg">
                 <div class="row bg-white navcol p-2">
                     <div class="col-lg-4">
-                        <img class="max-230" src="assets/images/miraclel.png" alt="">
+                        <a href="index.html">
+                            <img class="max-230" src="assets/images/miraclel.png" alt="">
+                        </a>
                         <a data-bs-toggle="collapse" data-bs-target="#menu" class="float-end d-lg-none pt-1 ps-3"><i
                                 class="bi pt-1 fs-1 cp bi-list"></i></a>
                     </div>
@@ -58,10 +60,10 @@
                         <ul class="fw-bold float-end nacul fs-7">
                             <li class="float-start p-3 px-4"><a href="index.html">Home</a></li>
                             <li class="float-start p-3 px-4"><a href="about.html">About Us</a></li>
-                            <li class="float-start p-3 px-4"><a href="sermon.html">Sermon</a></li>
+                            <li class="float-start p-3 px-4"><a href="sermon.html">Event</a></li>
                             <li class="float-start p-3 px-4"><a href="gallery.html">Gallery</a></li>
                             <li class="float-start p-3 px-4"><a href="blog.html">Blog</a></li>
-                            <li class="float-start p-3 px-4"><a href="blog.html">Donate</a></li>
+                            <li class="float-start p-3 px-4"><a href="blog.html">Give</a></li>
                             <li class="float-start p-3 px-4"><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
@@ -78,7 +80,7 @@
             <div class="row">
                 <h2 class="text-start">About Us</h2>
                 <ul>
-                    <li> <a href="#"><i class="bi bi-house-door"></i> Home</a></li>
+                    <li> <a href="index.html"><i class="bi bi-house-door"></i> Home</a></li>
                     <li><i class="bi bi-chevron-double-right pe-2"></i> About Us</li>
                 </ul>
             </div>
@@ -127,7 +129,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h2>Meet our team</h2>
+                        <h2>Meet TLC choir</h2>
                         <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt</p>
                     </div>
@@ -253,9 +255,10 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="sermon.html">Sermon</a></li>
+                            <li><a href="sermon.html">Event</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="blog.html">Blog</a></li>
+                            <li><a href="blog.html">Give</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
