--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <div class="container-lg">
                 <div class="row bg-white navcol p-2">
                     <div class="col-lg-4">
-                        <img class="max-230" src="assets/images/miraclel.png" alt="">
+                        <a href="index.html">
+                            <img class="max-230" src="assets/images/miraclel.png" alt="">
+                        </a>
                         <a data-bs-toggle="collapse" data-bs-target="#menu" class="float-end d-lg-none pt-1 ps-3"><i
                                 class="bi pt-1 fs-1 cp bi-list"></i></a>
                     </div>
@@ -58,10 +60,10 @@
                         <ul class="fw-bold float-end nacul fs-7">
                             <li class="float-start p-3 px-4"><a href="index.html">Home</a></li>
                             <li class="float-start p-3 px-4"><a href="about.html">About Us</a></li>
-                            <li class="float-start p-3 px-4"><a href="sermon.html">Sermon</a></li>
+                            <li class="float-start p-3 px-4"><a href="sermon.html">Event</a></li>
                             <li class="float-start p-3 px-4"><a href="gallery.html">Gallery</a></li>
                             <li class="float-start p-3 px-4"><a href="blog.html">Blog</a></li>
-                            <li class="float-start p-3 px-4"><a href="blog.html">Donate</a></li>
+                            <li class="float-start p-3 px-4"><a href="blog.html">Give</a></li>
                             <li class="float-start p-3 px-4"><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
@@ -148,6 +150,9 @@
                                         class="text-dark">Personal life</span></p>
                                 <p class="mt-2">United Nations, change-makers Kony 2012 storytelling meaningful, gun
                                     control making</p>
+                                <p class="p-3 font-weight-bold"><i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-heart-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-chat-dots"></i></p>
                             </div>
                         </div>
                     </div>
@@ -160,6 +165,9 @@
                                         class="text-dark">Personal life</span></p>
                                 <p class="mt-2">United Nations, change-makers Kony 2012 storytelling meaningful, gun
                                     control making</p>
+                                <p class="p-3 font-weight-bold"><i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-heart-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-chat-dots"></i></p>
                             </div>
                         </div>
                     </div>
@@ -172,6 +180,9 @@
                                         class="text-dark">Personal life</span></p>
                                 <p class="mt-2">United Nations, change-makers Kony 2012 storytelling meaningful, gun
                                     control making</p>
+                                <p class="p-3 font-weight-bold"><i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-heart-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                        class="bi bi-chat-dots"></i></p>
                             </div>
                         </div>
                     </div>
@@ -186,7 +197,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h2>Meet our team</h2>
+                        <h2>Meet TLC choir</h2>
                         <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt</p>
                     </div>
@@ -195,60 +206,60 @@
             <div class="row mt-4">
                 <div class="col-lg-3 mb-4 col-md-4 col-sm-6 col-6">
                     <div class="team-main-box bg-white shadow-md text-center">
-                        <img src="assets/images/team/3.jpg">
+                        <img src="assets/images/team/3.jpg" style="height: 330px;">
                         <div class="team-content-box">
                             <ul>
                                 <li><i class="fab fa-facebook-f"></i></li>
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Kevin</h3>
+                            <p class="pb-3">Vocalist</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 mb-4 col-md-4 col-sm-6 col-6">
                     <div class="team-main-box bg-white shadow-md text-center">
-                        <img src="assets/images/team/2.jpg">
+                        <img src="assets/images/team/2.jpg" style="height: 330px;">
                         <div class="team-content-box">
                             <ul>
                                 <li><i class="fab fa-facebook-f"></i></li>
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Paul</h3>
+                            <p class="pb-3">Choir Leader</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 mb-4 col-md-4 col-sm-6 col-6">
                     <div class="team-main-box bg-white shadow-md text-center">
-                        <img src="assets/images/team/4.jpg">
+                        <img src="assets/images/team/4.jpg" style="height: 330px;">
                         <div class="team-content-box">
                             <ul>
                                 <li><i class="fab fa-facebook-f"></i></li>
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Chrizo</h3>
+                            <p class="pb-3">Artist</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 mb-4 col-md-4 col-sm-6 col-6">
                     <div class="team-main-box bg-white shadow-md text-center">
-                        <img src="assets/images/team/1.jpg">
+                        <img src="assets/images/team/1.jpg" style="height: 330px;">
                         <div class="team-content-box">
                             <ul>
                                 <li><i class="fab fa-facebook-f"></i></li>
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">President</h3>
+                            <p class="pb-3">Leader</p>
                         </div>
                     </div>
                 </div>
@@ -404,9 +415,10 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="sermon.html">Sermon</a></li>
+                            <li><a href="sermon.html">Event</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
                             <li><a href="blog.html">Blog</a></li>
+                            <li><a href="blog.html">Give</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
@@ -439,7 +451,7 @@
     </footer>
     <div class="copy">
         <div class="container">
-            <a href="https://www.smarteyeapps.com/">2024 &copy; All Rights Reserved | Designed and Developed by
+            <a href="https://www.miracleCenter.com/">2024 &copy; All Rights Reserved | Designed and Developed by
                 Kevin Muhinda ft Festo Kabano</a>
 
             <span>
