--- a/about.html
+++ b/about.html
@@ -175,8 +175,8 @@
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Chrizo</h3>
+                            <p class="pb-3">Artist</p>
                         </div>
                     </div>
                 </div>
@@ -190,8 +190,8 @@
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">President</h3>
+                            <p class="pb-3">Leader</p>
                         </div>
                     </div>
                 </div>
