--- a/sermon.html
+++ b/sermon.html
@@ -50,7 +50,7 @@
             <div class="container-lg">
                 <div class="row bg-white navcol p-2">
                     <div class="col-lg-4">
-                        <img class="max-230" src="assets/images/logo.png" alt="">
+                        <img class="max-230" src="assets/images/miraclel.png" alt="">
                         <a data-bs-toggle="collapse" data-bs-target="#menu" class="float-end d-lg-none pt-1 ps-3"><i
                                 class="bi pt-1 fs-1 cp bi-list"></i></a>
                     </div>
