--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                                 <i class="bi bi-telephone"></i> +250785206973
                             </li>
                             <li class="float-start border-start">
-                                <i class="bi bi-box-arrow-in-right"></i> Login to account
+                                <a href="./login.html">
+                                    <i class="bi bi-box-arrow-in-right"></i> Login to account
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -89,7 +91,9 @@
                     </h1>
                     <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus massa lacus,
                         feugiat vel velit id, vehicula accumsan nisi </p>
-                    <button class="btn shadow-md btn-outline-light mt-4">Get Connected</button>
+                    <a href="./login.html">
+                        <button class="btn shadow-md btn-outline-light mt-4">Get Connected</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -463,8 +467,6 @@
             </span>
         </div>
     </div>
-
-
 </body>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
