--- a/about.html
+++ b/about.html
@@ -145,8 +145,8 @@
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Kevin</h3>
+                            <p class="pb-3">Vocalist</p>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                                 <li><i class="fab fa-twitter"></i></li>
                                 <li><i class="fab fa-instagram"></i></li>
                             </ul>
-                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Williams</h3>
-                            <p class="pb-3">UI/UX Developer</p>
+                            <h3 class="fw-bolder mt-3 fs-4 mb-0">Paul</h3>
+                            <p class="pb-3">Choir Leader</p>
                         </div>
                     </div>
                 </div>
