--- a/register.html
+++ b/register.html
@@ -24,18 +24,18 @@
 					<div class="heading mb-3">
 						<h4>Create an account</h4>
 					</div>
-					<form>
+					<form id="signupForm">
 						<div class="form-input">
 							<span><i class="fa fa-user"></i></span>
-							<input type="text" placeholder="Full Name" required>
+							<input type="text" id="flname" placeholder="Full Name" required>
 						</div>
 						<div class="form-input">
 							<span><i class="fa fa-envelope"></i></span>
-							<input type="email" placeholder="Email Address" required>
+							<input type="email" id="email" placeholder="Email Address" required>
 						</div>
 						<div class="form-input">
 							<span><i class="fa fa-lock"></i></span>
-							<input type="password" placeholder="Password" required>
+							<input type="password" id="pwd" placeholder="Password" required>
 						</div>
 						<div class="row mb-3">
 							<div class="col-12 d-flex">
@@ -77,6 +77,45 @@
 			<div class="col-lg-6 col-md-6 d-none d-md-block image-container"></div>
 		</div>
 	</div>
+	<script>
+		document.getElementById("signupForm").addEventListener("submit", (e) => {
+			e.preventDefault();
+			const username = document.getElementById("flname").value;
+			const email = document.getElementById("email").value;
+			const password = document.getElementById("pwd").value;
+
+			var myHeaders = new Headers();
+			myHeaders.append("Content-Type", "application/json");
+
+			var raw = JSON.stringify({
+				"username": username,
+				"email": email,
+				"password": password
+			});
+
+			var requestOptions = {
+				method: 'POST',
+				headers: myHeaders,
+				body: raw,
+				redirect: 'follow'
+			};
+
+			fetch("users/signUp", requestOptions)
+				.then(response => response.json())
+				.then(result => {
+					console.log(result)
+					if (result.success) {
+						alert("Your Account created Successfuly");
+						window.open("login.html", "_self");
+					}
+					else {
+						alert(result.message)
+						return false
+					}
+				})
+				.catch(error => console.log('error', error));
+		})
+	</script>
 </body>
 
 </html>
