--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,11 @@
                             <li class="float-start border-start">
                                 <i class="bi bi-telephone"></i> +250785206973
                             </li>
-                            <li class="float-start border-start">
-                                <i class="bi bi-box-arrow-in-right"></i> Login to account
-                            </li>
+                            <a href="./login.html">
+                                <li class="float-start border-start">
+                                    <i class="bi bi-box-arrow-in-right"></i> Login to account
+                                </li>
+                            </a>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -244,8 +246,7 @@
     </footer>
     <div class="copy">
         <div class="container">
-            <a href="https://www.miracleCenter.com/">2024 &copy; All Rights Reserved | Designed and Developed by
-                Kevin Muhinda ft Festo Kabano</a>
+            <a href="https://www.miracleCenter.com/">2024 &copy; All Rights Reserved | Designed and Developed by Festo Kabano</a>
 
             <span>
                 <a href=""><i class="fab fa-github"></i></a>
