--- a/gallery.html
+++ b/gallery.html
@@ -30,9 +30,11 @@
                             <li class="float-start border-start">
                                 <i class="bi bi-telephone"></i> +250785206973
                             </li>
-                            <li class="float-start border-start">
-                                <i class="bi bi-box-arrow-in-right"></i> Login to account
-                            </li>
+                            <a href="./login.html">
+                                <li class="float-start border-start">
+                                    <i class="bi bi-box-arrow-in-right"></i> Login to account
+                                </li>
+                            </a>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -234,7 +236,7 @@
     <div class="copy">
         <div class="container">
             <a href="https://www.smarteyeapps.com/">2022 &copy; All Rights Reserved | Designed and Developed by
-                Smarteyeapps.com</a>
+                KABANO Festo</a>
 
             <span>
                 <a href=""><i class="fab fa-github"></i></a>
