--- a/sermon.html
+++ b/sermon.html
@@ -264,8 +264,7 @@
     </footer>
     <div class="copy">
         <div class="container">
-            <a href="https://www.miracleCenter.com/">2024 &copy; All Rights Reserved | Designed and Developed by
-                Kevin Muhinda ft Festo Kabano</a>
+            <a href="https://www.miracleCenter.com/">2024 &copy; All Rights Reserved | Designed and Developed by Festo Kabano</a>
 
             <span>
                 <a href=""><i class="fab fa-github"></i></a>
